--- a/03-orchestration/mage/mlops/homework_03/pipelines/data_preparation/metadata.yaml
+++ b/03-orchestration/mage/mlops/homework_03/pipelines/data_preparation/metadata.yaml
@@ -13,30 +13,49 @@ blocks:
   language: python
   name: Ingest
   retry_config: null
-  status: updated
+  status: executed
   timeout: null
   type: data_loader
   upstream_blocks: []
   uuid: ingest
-- all_upstream_blocks_executed: false
+- all_upstream_blocks_executed: true
   color: null
   configuration:
     file_source:
       path: homework_03/transformers/clean_outliers.py
   downstream_blocks:
   - summary_overview_for_clean_outliers
+  - encoder
   executor_config: null
   executor_type: local_python
   has_callback: false
   language: python
   name: Clean_outliers
   retry_config: null
-  status: updated
+  status: executed
   timeout: null
   type: transformer
   upstream_blocks:
   - ingest
   uuid: clean_outliers
+- all_upstream_blocks_executed: true
+  color: null
+  configuration:
+    file_source:
+      path: homework_03/data_exporters/encoder.py
+  downstream_blocks: []
+  executor_config: null
+  executor_type: local_python
+  has_callback: false
+  language: python
+  name: Encoder
+  retry_config: null
+  status: updated
+  timeout: null
+  type: data_exporter
+  upstream_blocks:
+  - clean_outliers
+  uuid: encoder
 cache_block_output_in_memory: false
 callbacks: []
 concurrency_config: {}
@@ -64,10 +83,11 @@ tags: []
 type: python
 uuid: data_preparation
 variables:
-  max_size_df: 1000
+  max_size_df: 0
+  target: duration
 variables_dir: /home/src/mage_data/homework_03
 widgets:
-- all_upstream_blocks_executed: false
+- all_upstream_blocks_executed: true
   color: null
   configuration:
     chart_type: table
@@ -82,13 +102,13 @@ widgets:
   language: python
   name: summary overview for ingest
   retry_config: null
-  status: executed
+  status: failed
   timeout: null
   type: chart
   upstream_blocks:
   - ingest
   uuid: summary_overview_for_ingest
-- all_upstream_blocks_executed: false
+- all_upstream_blocks_executed: true
   color: null
   configuration:
     chart_type: table
@@ -103,7 +123,7 @@ widgets:
   language: python
   name: summary overview for clean_outliers
   retry_config: null
-  status: executed
+  status: failed
   timeout: null
   type: chart
   upstream_blocks:
