--- a/03-orchestration/mage/docker-compose.yml
+++ b/03-orchestration/mage/docker-compose.yml
@@ -38,6 +38,16 @@ services:
     restart: always
     networks:
       - app-network
+  mlflow:
+    build:
+      context: .
+      dockerfile: mlflow.dockerfile
+    ports:
+      - "5000:5000"
+    volumes:
+      - /home/aleksandr/GitHub/MLOps_zoomcamp/03-orchestration/mage/mlflow:/home/mlflow/
+    networks:
+      - app-network
 networks:
   app-network:
     driver: bridge
