--- a/03-orchestration/mage/mlops/homework_03/pipelines/data_preparation/metadata.yaml
+++ b/03-orchestration/mage/mlops/homework_03/pipelines/data_preparation/metadata.yaml
@@ -62,11 +62,9 @@ concurrency_config: {}
 conditionals: []
 created_at: '2024-06-03 10:33:41.168393+00:00'
 data_integration: null
-description: '1. Collect Yellow taxi data 2023 March
-
-  2. Cleaning: del duration time over 60 minutes
-
-  3. Feature engineering to transform the raw data into a set of useful input features.'
+description: "1. Collect Yellow taxi data 2023 March\n2. Cleaning: del duration time\
+  \ over 60 minutes\n3. One-Hot_Encoder for [PUL, DOL]\n4. Return X_train, y, DictVectorizer\
+  \ \n5. Test X_train, y"
 executor_config: {}
 executor_count: 1
 executor_type: null
