--- a/03-orchestration/mage/mlops/homework_03/pipelines/training_sklearn2/metadata.yaml
+++ b/03-orchestration/mage/mlops/homework_03/pipelines/training_sklearn2/metadata.yaml
@@ -43,27 +43,54 @@ blocks:
   configuration:
     file_source:
       path: homework_03/transformers/default_training.py
-  downstream_blocks: []
+  downstream_blocks:
+  - loging_and_export_artifacts
   executor_config: null
   executor_type: local_python
   has_callback: false
   language: python
   name: Default training
   retry_config: null
-  status: updated
+  status: executed
   timeout: null
   type: transformer
   upstream_blocks:
   - training_set
   - load_models
   uuid: default_training
+- all_upstream_blocks_executed: true
+  color: null
+  configuration:
+    file_source:
+      path: homework_03/data_exporters/loging_and_export_artifacts.py
+  downstream_blocks: []
+  executor_config: null
+  executor_type: local_python
+  has_callback: false
+  language: python
+  name: loging_and_export_artifacts
+  retry_config: null
+  status: executed
+  timeout: null
+  type: data_exporter
+  upstream_blocks:
+  - default_training
+  uuid: loging_and_export_artifacts
 cache_block_output_in_memory: false
 callbacks: []
 concurrency_config: {}
 conditionals: []
 created_at: '2024-06-04 12:02:38.679399+00:00'
 data_integration: null
-description: null
+description: '1. Use returned X_train, y throw GD
+
+  2. Load LinearRegression sklearn model
+
+  3. Train with default hyperparameters
+
+  4. Return fit model with parameters including intercept, X_train, y, dv
+
+  5. mlflow log model and save dv in artifact'
 executor_config: {}
 executor_count: 1
 executor_type: null
