fix minor mistake for HW03

--- a/03-orchestration/mage/docker-compose.yml
+++ b/03-orchestration/mage/docker-compose.yml
@@ -45,7 +45,7 @@ services:
     ports:
       - "5000:5000"
     volumes:
-      - /home/aleksandr/GitHub/MLOps_zoomcamp/03-orchestration/mage/mlflow:/home/mlflow/
+      - "${PWD}/mlflow:/home/mlflow/"
     networks:
       - app-network
 networks:
