add save artifact and model to specific local dir

--- a/03-orchestration/mage/docker-compose.yml
+++ b/03-orchestration/mage/docker-compose.yml
@@ -46,6 +46,7 @@ services:
       - "5000:5000"
     volumes:
       - "${PWD}/mlflow:/home/mlflow/"
+      - "${PWD}/mlflow/artifacts:/home/mlflow/artifacts"
     networks:
       - app-network
 networks:
