--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 02-experiment-tracking/description_homework/__pycache__/
 02-experiment-tracking/mlruns/
 02-experiment-tracking/read_mlflow_mlruns.ipynb
+05-monitoring/baseline_model_nyc_taxi_data.ipynb
