--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-02-experiment-tracking/description_homework/__pycache__/
 02-experiment-tracking/mlruns/
 02-experiment-tracking/read_mlflow_mlruns.ipynb
 05-monitoring/baseline_model_nyc_taxi_data.ipynb
 05-monitoring/data/postgres/
+**/__pycache__/
